src/objects/dwp_frct__grouping__c.object
<CustomObject>
    <description>Object to related plans with opportunity object.</description>
    <fields>
        <fullName>dwp_frct__initial_amount__c</fullName>
        <description>The volume of business that the RM has alive the first day of the Management Plan.</description>
        <label>Start Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__management_expected_drop_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of expected executive falls per family and per management plan</description>
        <label>Expected Drop Management Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__management_plan_amount__c</fullName>
        <description>Sum of executive commitments by family and management plan.</description>
        <label>Management Plan Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__management_plan_id__c</fullName>
        <description>Management plan object</description>
        <label>Management Plan</label>
        <referenceTo>dwp_frct__management_plan__c</referenceTo>
        <relationshipLabel>Groupings</relationshipLabel>
        <relationshipName>Groupings</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>dwp_frct__net_commitment_amount__c</fullName>
        <formula>dwp_frct__original_commitment_amount__c  -  dwp_frct__opportunity_expected_drop_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__net_commitment_management_plan__c</fullName>
        <formula>dwp_frct__original_commitment_amount__c  -  dwp_frct__management_expected_drop_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Net Commitment Management Plan</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__opportunity_amortization_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amortization amount of opportunity products.</description>
        <label>Amortizations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__opportunity_antcp_expiry_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount modifiable by the manager in case it detects expiration.</description>
        <label>Anticipated maturities</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__opportunity_cancellation_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount of cancellation per product family of opportunity.</description>
        <label>Cancellations</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__opportunity_closed_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Sum of amount opportunities formalized within the period.</description>
        <label>Closed amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__opportunity_expected_drop_amount__c</fullName>
        <description>By default it shows the sum of cancellations, amortizations and anticipated maturities.</description>
        <formula>dwp_frct__opportunity_amortization_amount__c +  dwp_frct__opportunity_antcp_expiry_amount__c  +  dwp_frct__opportunity_cancellation_amount__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expected drop</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__opportunity_selected_tot_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Total amount of opportunities selected by family</description>
        <label>Selected Opportunities Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__original_commitment_amount__c</fullName>
        <defaultValue>0</defaultValue>
        <description>Amount to which the manager commits.</description>
        <label>Commitment</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>dwp_frct__solution_category_type__c</fullName>
        <description>Family category opportunity.</description>
        <label>Family</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>id_unique__c</fullName>
        <description>Internal code</description>
        <externalId>true</externalId>
        <label>Unique identifier gruoping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Grouping</label>
    <nameField>
        <label>Grouping Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Groupings</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>dwp_frct__Avoid_negative_values_antcp_maturities</fullName>
        <active>true</active>
        <errorConditionFormula>dwp_frct__opportunity_antcp_expiry_amount__c &lt; 0</errorConditionFormula>
        <errorDisplayField>dwp_frct__opportunity_antcp_expiry_amount__c</errorDisplayField>
        <errorMessage>Please, enter a positive anticipated maturities amount</errorMessage>
    </validationRules>
</CustomObject>